# daemon

./: CMakeLists.txt  main.cpp  run  run.sh
components/ntp/: ntp-client  ntp.hpp  sntp_01  sntp_01.c
components/socket/tcp/: socket_tcp.hpp
components/socket/udp/: client  client.cpp  client0  client_tcp  server.cpp  server0  server_tcp  socket_udp.hpp
